[package]
name = "hyper-proxy"
version = "0.9.0"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
description = "A proxy connector for Hyper-based applications"

documentation = "https://docs.rs/hyper-proxy"
repository = "https://github.com/tafia/hyper-proxy"

readme = "README.md"
keywords = ["hyper", "proxy", "tokio", "ssl"]
categories = ["web-programming::http-client", "asynchronous", "authentication"]
license = "MIT"
edition = "2018"

[dependencies]
bytes = "1.0"
futures-util = { version = "0.3", default-features = false }
headers = "0.4"
http = "1.0.0"
hyper = { version = "1.1"}
hyper-rustls = { version = "0.22", optional = true }
hyper-tls = { version = "0.6.0", optional = true }
http-body-util = "0.1.0"
hyper-util = { version = "0.1.2", features = ["client", "client-legacy", "http1"] }
native-tls = { version = "0.2", optional = true }
openssl = { version = "0.10", optional = true }
rustls-native-certs = { version = "0.5.0", optional = true }
tokio = { version = "1", features = ["io-std", "io-util"] }
tokio-native-tls = { version = "0.3.0", optional = true }
tokio-openssl = { version = "0.6", optional = true }
tokio-rustls = { version = "0.22", optional = true }
webpki = { version = "0.21", optional = true }
webpki-roots = { version = "0.21.0", optional = true }
tower-service = "0.3.2"

[dev-dependencies]
http-body-util = "0.1.0"
hyper = { version = "1.0", features = ["http1"] }
hyper-util = { version = "0.1.1", features = ["client-legacy", "http1"] }
tokio = { version = "1.0", features = ["full"] }

[features]
openssl-tls = ["openssl", "tokio-openssl"]
tls = ["tokio-native-tls", "hyper-tls", "native-tls"]
# note that `rustls-base` is not a valid feature on its own - it will configure rustls without root
# certificates!
rustls-base = ["tokio-rustls", "hyper-rustls", "webpki"]
rustls = ["rustls-base", "rustls-native-certs", "hyper-rustls/native-tokio"]
rustls-webpki = ["rustls-base", "webpki-roots", "hyper-rustls/webpki-tokio"]
default = ["tls"]
